add Sonar Tests